--- a/HTML_projects/01/styles.css
+++ b/HTML_projects/01/styles.css
@@ -55,22 +55,29 @@ body {
 }
 
 ul {
+    margin-left: 0;
     list-style-type: none;
     display: inline-block;
 }
 .ul-div {
-    width: 200px;
-    margin-left: 10px;
-    margin-top: 15px;
-    border: 1px white double;
+
+    margin-top: 100px;
+
+    margin-left: -90px;
     text-align: left;
+    padding: 10px;
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #end {
-    display: inline;
+    display: inline-block;
     margin-top: -90px;
     margin-right: -1250px;
     border: 0.5px white solid;
+}
+
+.form {
+    margin-top:10px;
+    text-align: left;
 }
