Added a div containing the whole page and another one for the footer. In the css file added a display:flex function to the div containing the whole page while also setting the flex-direction to column

--- a/HTML_projects/01/styles.css
+++ b/HTML_projects/01/styles.css
@@ -9,6 +9,13 @@ body {
     margin-top: 0;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
 .arsenal-lovers {
     font-size: small;
     color: red;
